<resources>
    <string name="app_name">Gauge Health</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="health_conditions">Health Conditions</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_email">Update Email</string>
    <string name="update_password">Update Password</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="username">John Doe</string>
    <string name="user_email">johndoe@email.com</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="general_health_survey">General \nHealth Survey</string>
    <string name="check_blood_pressure">Check \nBlood Pressure</string>
    <string name="check_temperature">Check \nTemperature</string>
    <string name="check_oxygen_saturation">Check \nOxygen Saturation</string>
    <string name="check_pulse">Check Pulse</string>
    <string name="seek_help">Seek Help</string>
    <string name="emergency_services">Emergency \nServices</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="check_emotion">Check \nEmotion</string>
    <string name="folder_image">Folder Image</string>
    <string name="smile_emoji">Smile Emoji</string>
    <string name="blood_pressure_check_image">Blood Pressure Check Image</string>
    <string name="temperature_check_image">Temperature Check Image</string>
    <string name="oxygen_saturation_image">Oxygen Saturation Image</string>
    <string name="heart_pulse_image">Heart Pulse Image</string>
    <string name="helping_hand_image">Helping Hand Image</string>
    <string name="Exercise">Exercise</string>
    <string name="exercise_image">Exercise Image</string>
    <string name="ambulance_van_image">Ambulance Van Image</string>
    <string name="medications_image">Medications Image</string>
    <string name="blood_pressure">Check Blood Pressure Fragment</string>
    <string name="check_temperature_fragment">Check Temperature Fragment</string>
    <string name="oxySaturation">Check Oxygen Saturation Fragment</string>
    <string name="pulse_fragment">Check Pulse Fragment</string>
    <string name="medical_help">Seek Help Fragment</string>
    <string name="exercise_fragment">Exercise Fragment</string>
    <string name="emergency_fragment">Emergency Services Fragment</string>
    <string name="pharmacy_fragment">Pharmacy Fragment</string>
    <string name="login_text">Login</string>
    <string name="email_input">Email</string>
    <string name="password_button">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="register_header_text">Please enter your details to register</string>
    <string name="full_name">Full Name:</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="register_email">Email:</string>
    <string name="enter_your_email">Enter email</string>
    <string name="register_dob">Date of Birth (dd/mm/yyyy):</string>
    <string name="enter_your_dob">Enter your date of birth (dd/mm/yyyy)</string>
    <string name="gender">Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="register_mobile">Mobile:</string>
    <string name="enter_your_mobile">Enter your mobile number</string>
    <string name="register_password1">Password:</string>
    <string name="register_password2">Enter Password</string>
    <string name="register_confirm_password">Confirm Password:</string>
    <string name="register_confirm_password2">Confirm Password</string>
    <string name="register_page_button">Register</string>
    <string name="select_your_dob">Select your date of birth (dd/mm/yyyy)</string>
    <string name="loading">Loading…</string>
    <string name="registered_email_txt">Registered Email:</string>
    <string name="password_reset_header">Please enter your registered here for password reset link</string>
    <string name="email_hint">Email</string>
    <string name="select_pic_text">Select and Upload profile picture</string>
    <string name="select_pic">Select Pic</string>
    <string name="upload_pic">Upload Pic</string>
    <string name="update_profile_header_txt">Please update your profile details now!</string>
    <string name="fullname_title">FullName:</string>
    <string name="enter_full_name">Enter Full name</string>
    <string name="date_of_birth">Date of Birth (dd/mm/yyyy):</string>
    <string name="update_profile_pic">Update Profile Pic</string>
    <string name="verify_account">Verify account with password and continue to update email.</string>
    <string name="current_email">Current Email:</string>
    <string name="current_password">Password*</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="authenticate">Authenticate</string>
    <string name="new_email">New Email:</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="verify_update_email">Now that you have verified; you can update email below.</string>
    <string name="current_password1">Current Password*</string>
    <string name="verify_account1">Verify password and Continue to change password.</string>
    <string name="new_password">New Password:</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm New Password*</string>
    <string name="update_confirm_new_password">Confirm new password</string>
    <string name="verify_update_password">Now that you are verified; you can change password below.</string>
    <string name="delete_account">You can delete your profile now. Please verify with your password to continue.</string>
    <string name="delete_header">You are verfied now. You can proceed to delete account.</string>
    <string name="delete_user">Delete Account</string>
    <string name="survey_questions">Health Survey Questions</string>
    <string name="header_sub_text">Please answer the following questions in the best of your ability</string>
    <string name="question_1">Today my relative/friend seems to be in pain.</string>
    <string name="number1">1</string>
    <string name="answer_1">All of the time</string>
    <string name="answer_2">Most of the time</string>
    <string name="answer_3">Some of the time</string>
    <string name="answer_4">None of the time</string>
    <string name="answer_5">Don\'t know</string>
    <string name="next_txt">Next</string>
    <string name="previous_txt">Previous</string>
    <string name="submit_txt">Submit</string>
    <string name="take_survey">Take Survey</string>
    <string name="responses">Survey Responses</string>
    <string name="survey_menu">Survey Menu</string>

    <string name="response_summary_question_txt">1</string>
    <string name="response_day_txt">Mon</string>
    <string name="response_date_txt">15</string>
    <string name="response_month_txt">Jan</string>
    <string name="responses_txt">Responses</string>
    <string name="response_summary_text">Response Summary</string>
    <string name="nhs_health_a_z">NHS Health A - Z</string>
    <string name="predict_btnText">Predict</string>
    <string name="capture_btnText">Capture Image</string>
    <string name="select_image_btnText">Select Image</string>
    <string name="health_condition_text">Health Condition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bp_header">Please select your device to conduct check</string>
    <string name="connect_to_apple_watch">Connect to Apple Watch</string>
    <string name="galaxy_watch_connect">Connect to Galaxy Watch</string>
    <string name="fitbit_watch_connect">Connect to FitBit</string>
    <string name="garmin_watch_connect">Connect to Garmin</string>
    <string name="ecg_connect">Connect to ECG Monitor</string>
    <string name="biocensor_connect">Connect to BioSensor</string>
    <string name="help_header">"Select the best \noption for you, to get help "</string>
    <string name="chat_for_help">Chat with a trusted professional</string>
    <string name="call_for_help">Call Emergency Services</string>
    <string name="emergency_header">Call for Emergency Services</string>
    <string name="pharmacy_header">Locate a Pharmacy near you</string>
    <string name="walk_to_pharmacy">Start walking to the pharmacy</string>
    <string name="hail_a_ride">Hail a ride</string>
    <string name="run_workout_vid">30mins Run Workout Video</string>
    <string name="creator">Amber</string>
    <string name="time">78K views .2 years ago</string>
    <string name="timer">29:59</string>
    <string name="meditation_workout_vid">30mins Meditation Video</string>
    <string name="bicycle_workout_vid">30mins Bicycle Workout Video</string>
    <string name="thread_workout_vid">30mins Threadmill Workout Video</string>
    <string name="Cari_workout_vid">Calisthenics Video</string>
    <string name="time2">25K views .1month ago</string>
    <string name="time3">14K views .1year ago</string>
    <string name="time4">1K views .1week ago</string>
    <string name="time5">2K views .4months ago</string>
    <string name="condition_name">Name</string>
    <string name="conditions_description">Description</string>
    <string name="visit_link">Visit NHS official site for more.</string>
    <string name="article_status">Article Status</string>
</resources>