<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stetescope1"
    tools:context=".RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="15dp"
        app:cardCornerRadius="15dp"
        android:padding="5dp"
        android:layout_margin="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="15dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/register_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/register_header_text"
                android:textAlignment="center"
                android:textColor="@color/Light_blue"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

            <TextView
                android:id="@+id/register_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_header"
                android:text="@string/full_name"
                android:textColor="@color/Light_blue"
                android:padding="6dp"
                android:textSize="16sp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/register_enter_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_full_name"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:padding="6dp"
                android:layout_below="@id/register_full_name"
                android:background="@drawable/edit_text_background"/>

            <TextView
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_enter_fullName"
                android:text="@string/register_email"
                android:textColor="@color/Light_blue"
                android:padding="6dp"
                android:textSize="16sp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/register_enter_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:padding="6dp"
                android:layout_below="@id/register_email"
                android:background="@drawable/edit_text_background"/>

            <TextView
                android:id="@+id/register_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_enter_email"
                android:text="@string/register_dob"
                android:textColor="@color/Light_blue"
                android:padding="6dp"
                android:textSize="16sp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/register_enter_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_your_dob"
                android:focusable="false"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:padding="6dp"
                android:layout_below="@id/register_dob"
                android:background="@drawable/edit_text_background"/>

            <TextView
                android:id="@+id/register_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_enter_dob"
                android:text="@string/gender"
                android:textColor="@color/Light_blue"
                android:padding="6dp"
                android:textSize="16sp"
                android:layout_marginTop="5dp"/>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/register_gender">

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="16sp"
                    android:textColor="@color/Light_blue"/>

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="16sp"
                    android:textColor="@color/Light_blue"/>
            </RadioGroup>
            <TextView
                android:id="@+id/register_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/radio_group"
                android:text="@string/register_mobile"
                android:textColor="@color/Light_blue"
                android:padding="6dp"
                android:textSize="16sp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/register_enter_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_mobile"
                android:inputType="phone"
                android:textSize="16sp"
                android:padding="6dp"
                android:layout_below="@id/register_mobile"
                android:background="@drawable/edit_text_background"/>

            <TextView
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_enter_mobile"
                android:text="@string/register_password1"
                android:textColor="@color/Light_blue"
                android:padding="6dp"
                android:textSize="16sp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/register_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password2"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:padding="6dp"
                android:layout_below="@id/register_password"
                android:background="@drawable/edit_text_background"/>

            <TextView
                android:id="@+id/register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_password2"
                android:text="@string/register_confirm_password"
                android:textColor="@color/Light_blue"
                android:padding="6dp"
                android:textSize="16sp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/register_confirm_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_confirm_password2"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:padding="6dp"
                android:layout_below="@id/register_confirm_password"
                android:background="@drawable/edit_text_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_below="@id/register_confirm_password2"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_background"
                android:text="@string/register_page_button"/>

            <ProgressBar
                android:id="@+id/register_progBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:elevation="10dp"
                android:visibility="gone"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>



</ScrollView>