<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_details"
    android:orientation="vertical"
    android:background="@drawable/stetescope1"
    tools:context=".DetailsFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:paddingBottom="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/condition_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condition_name"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/roboto_slab_bold"/>

            <TextView
                android:id="@+id/description_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/conditions_description"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_slab_bold"/>

            <TextView
                android:id="@+id/details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingEnd="8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textAlignment="textStart"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/details_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingEnd="8dp"
                android:textAlignment="textStart"
                android:layout_marginTop="10dp"
                android:text="@string/visit_link"
                android:textColor="@color/Light_blue"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/articleStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/article_status"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_slab_bold"/>

            <TextView
                android:id="@+id/articleDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingEnd="8dp"
                android:textAlignment="textStart"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>





    </ScrollView>

</LinearLayout>